# companion

./: .dockerignore  .gitignore  Dockerfile  README.md  hello.py  humanStyle_conversation.jsonl  pyproject.toml  requirements.txt
src/server/: KB.py  LLM.py  STT.py  app.py  langchain_openai_voice.py  prompt.py  tools.py  utils.py
src/server/static/freebie/: index.html  script.js
src/server/static/premium/: index.html
